# sidekick-agent

./: .env.example  .gitignore  CHANGELOG-v0.8.0.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SOUL.md  Sidekick-Launcher.ps1  _find_hermes.py  _find_sidekick.py  _smoke_runtime.py  _v.py  aces_llm.py  aces_tests.py  audit-deepseek-v4-pro.md  audit-opencode-codex.md  autobiography.py  autonomer_tick.py  check_braces.py  check_ps_syntax.ps1  diag.ps1  diag2.ps1  diag3.ps1  diag4.ps1  diag5.ps1  dream_narrator.py  entity_kernel.py  fix_installer.py  fix_venv_paths.py  install.ps1  launcher.bat  local_llm_bridge.py  model_tools.py  needs.py  nova_mind.py  patch_v074.py  pyproject.toml  reflection_cycle.py  run_agent.py  (+21 more)
.playwright-cli/: page-2026-07-07T22-21-48-674Z.yml  page-2026-07-07T22-28-17-134Z.yml  page-2026-07-08T00-04-31-232Z.yml  page-2026-07-08T03-49-48-919Z.yml  page-2026-07-08T04-02-31-478Z.yml  page-2026-07-08T04-07-58-003Z.yml  page-2026-07-08T04-08-40-597Z.yml  page-2026-07-08T04-09-33-714Z.yml  page-2026-07-08T04-10-16-746Z.yml  page-2026-07-08T04-15-36-261Z.yml  page-2026-07-08T04-20-02-873Z.yml  page-2026-07-08T04-25-30-511Z.yml  page-2026-07-08T04-26-48-517Z.yml  page-2026-07-08T05-34-42-493Z.yml  page-2026-07-08T05-39-05-216Z.yml  page-2026-07-08T05-39-27-905Z.yml  page-2026-07-08T05-41-28-465Z.yml  page-2026-07-08T05-44-42-945Z.yml
cli/: __init__.py  _parser.py  _subprocess_compat.py  auth.py  auth_commands.py  azure_detect.py  backup.py  banner.py  browser_connect.py  callbacks.py  checkpoints.py  claw.py  cli.py  cli_output.py  clipboard.py  codex_models.py  colors.py  commands.py  completion.py  config.py  copilot_auth.py  cron.py  curator.py  curses_ui.py  debug.py  default_soul.py  dingtalk_auth.py  doctor.py  dump.py  env_loader.py  fallback_cmd.py  gateway.py  gateway_windows.py  goals.py  hooks.py  kanban.py  kanban_db.py  kanban_diagnostics.py  kanban_specify.py  local_state_repair.py  (+36 more)
cli_backup/: __init__.py  main.py
cron/: __init__.py  jobs.py  scheduler.py
docs/: README.md  architecture.md  config-reference.md  consolidation.md  known-issues.md  morph-worker-integration.md  release-checklist.md  roadmap-v0.6.0.md  troubleshooting.md
gateway/: __init__.py  agent_pool.py  channel_directory.py  config.py  display_config.py  hooks.py  mirror.py  pairing.py  platform_registry.py  restart.py  run.py  runtime_footer.py  session.py  session_context.py  shutdown_forensics.py  status.py
nova/: __init__.py  actions.py  agenda.py  autobiography.py  autonomer_tick.py  autonomy_policy.json  autonomy_policy.py  entity_kernel.py  entity_state.py  entity_types.py  experience_learning.py  memory_quality.py  needs.py  outcome_evaluator.py  paths.py  presence.py  reflection_cycle.py  reflection_worker.py  self_evolution.py  self_model_template.json  soak_monitor.py  state_snapshot.py  test_agenda.py  test_autobiography.py  test_autonomy_policy.py  test_entity_kernel.py  test_entity_runtime_v2.py  test_needs.py  test_reflection_cycle.py
providers/: __init__.py  base.py
runtime/: __init__.py  account_usage.py  anthropic_adapter.py  auxiliary_client.py  bedrock_adapter.py  codex_responses_adapter.py  config.py  context_compressor.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  credential_sources.py  curator_backup.py  display.py  file_safety.py  gemini_cloudcode_adapter.py  gemini_native_adapter.py  gemini_schema.py  google_code_assist.py  google_oauth.py  i18n.py  image_gen_provider.py  image_gen_registry.py  image_routing.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  models.py  models_dev.py  nous_rate_guard.py  onboarding.py  plugin_llm.py  plugins.py  prompt_builder.py  provider_response_state.py  redact.py  shell_hooks.py  skill_commands.py  (+10 more)
scripts/: browser_webui_smoke.py  eigenziele.json  eigenziele.py  publish-v0.7.0.ps1
shared/: __init__.py  agent_bridge.py  config.py  constants.py  logging_setup.py  paths.py  repo_safety.py  runtime.py  sessions.py  utils.py
sidekick_app/: __init__.py  __main__.py
sidekick_cli/: __init__.py  config.py  main.py
tests/: smoke_all.py  smoke_dashboard.py  smoke_webui.py  test_agent_pool.py  test_agent_session_rows.py  test_agent_sessions_cache.py  test_agent_workspace.py  test_agents_game_mode.py  test_approval_contracts.py  test_browser_permission_contracts.py  test_browser_qa_contracts.py  test_browser_runtime_qa_contracts.py  test_cli_session_metadata.py  test_cli_session_titles.py  test_cli_skin_engine.py  test_cli_subprocess_encoding.py  test_cli_syntax_warnings.py  test_cron_jobs.py  test_dashboard_frontend_contract.py  test_dashboard_health.py  test_doctor_wal.py  test_env_defaults.py  test_fastapi_route_bridge.py  test_gateway_forwarders.py  test_gateway_status.py  test_gmail_tools.py  test_goal_judge_game_mode.py  test_goal_resume.py  test_gpu_watchdog.py  test_kanban_orchestration.py  test_kanban_worker_capacity.py  test_legacy_entrypoints.py  test_local_environment_paths.py  test_local_state_repair.py  test_mcp_config_redaction.py  test_mcp_description_scanner.py  test_mcp_stdio_proxy.py  test_minimax_mcp_preset.py  test_nova_dream_narrator.py  test_nova_entity_voice.py  (+43 more)
tools/: __init__.py  approval.py  browser_camofox.py  browser_camofox_state.py  browser_cdp_tool.py  browser_supervisor.py  browser_tool.py  budget_config.py  checkpoint_manager.py  code_execution_tool.py  credential_files.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  discord_tool.py  env_passthrough.py  feishu_doc_tool.py  file_operations.py  file_state.py  file_tools.py  fuzzy_match.py  image_generation_tool.py  interrupt.py  kanban_tools.py  mail_folders.py  mail_imap.py  mail_read.py  mail_search.py  mail_send.py  managed_tool_gateway.py  mcp_oauth.py  mcp_oauth_manager.py  mcp_stdio_proxy.py  (+35 more)
(+259 files in other folders)
