[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sidekick"
version = "0.8.73"
description = "Sidekick Agent"
authors = [{name = "Sidekick"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "fire>=0.5",
    "wcwidth>=0.2",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104,<1",
    "uvicorn[standard]>=0.24,<1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "cryptography>=41.0",
]
nova = [
    "numpy>=2.0",
    "chromadb>=1.0",
    "sentence-transformers>=5.0",
]
telegram = [
    "python-telegram-bot>=21,<23",
]
all = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "cryptography>=41.0",
    "openai>=1.0",
    "requests>=2.31",
    "packaging>=23.0",
    "pillow>=10.0",
    "tiktoken>=0.5",
    "croniter>=2.0",
    "python-telegram-bot>=21,<23",
    "beautifulsoup4>=4.12",
    "numpy>=2.0",
    "chromadb>=1.0",
    "sentence-transformers>=5.0",
]

[project.scripts]
sidekick = "cli.main:main"

[project.urls]
Homepage = "https://github.com/sidekick-ai/sidekick"
Documentation = "https://docs.sidekick-agent.dev"

[tool.setuptools]
include-package-data = true
# Root-level helper modules are imported directly by package code.
# Keep them in the editable/wheel module set so launcher-driven and
# test-driven imports do not depend on the current working directory.
py-modules = ["run_agent", "sidekick_constants", "bootstrap", "model_tools", "toolsets"]

[tool.setuptools.packages.find]
include = [
    "cli", "cli.*",
    "cron", "cron.*",
    "gateway", "gateway.*",
    "providers", "providers.*",
    "runtime", "runtime.*", "runtime._compat", "runtime.cron", "runtime.cron.*",
    "runtime.gateway", "runtime.gateway.*",
    "shared", "shared.*",
    "sidekick_cli", "sidekick_cli.*",
    "tests", "tests.*",
    "tools", "tools.*", "tools.environments", "tools.environments.*",
    "tools.web_providers", "tools.web_providers.*",
    "tools.computer_use", "tools.computer_use.*",
    "tools.browser_providers", "tools.browser_providers.*",
    "web", "web.*", "web.api",
    "sidekick_app",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
